--- a/desafio-7/package.json
+++ b/desafio-7/package.json
@@ -21,6 +21,7 @@
     "mongoose": "^7.5.3",
     "mongoose-paginate-v2": "^1.7.4",
     "passport": "^0.6.0",
+    "passport-github2": "^0.1.12",
     "passport-local": "^1.0.0",
     "socket.io": "^4.7.2"
   }
