--- a/desafio-7/package.json
+++ b/desafio-7/package.json
@@ -18,6 +18,8 @@
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
     "express-session": "^1.17.3",
+    "from": "^0.1.7",
+    "import": "^0.0.6",
     "mongoose": "^7.5.3",
     "mongoose-paginate-v2": "^1.7.4",
     "passport": "^0.6.0",
