--- a/desafio-6/package.json
+++ b/desafio-6/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "connect-mongo": "^5.1.0",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
     "express-session": "^1.17.3",
