--- a/desafio-12-complementario/package.json
+++ b/desafio-12-complementario/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@faker-js/faker": "^7.6.0",
     "bcrypt": "^5.1.1",
+    "chalk": "^5.3.0",
     "commander": "^11.1.0",
     "connect-mongo": "^5.1.0",
     "cookie-parser": "^1.4.6",
