--- a/desafio-7/package.json
+++ b/desafio-7/package.json
@@ -22,6 +22,7 @@
     "import": "^0.0.6",
     "mongoose": "^7.5.3",
     "mongoose-paginate-v2": "^1.7.4",
+    "nodemon": "^3.0.2",
     "passport": "^0.6.0",
     "passport-github2": "^0.1.12",
     "passport-local": "^1.0.0",
