--- a/desafio-14-complementario/package.json
+++ b/desafio-14-complementario/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start-dev": "nodemon src/app.js --mode development --port 3000",
-    "start-prod": "nodemon src/app.js --mode production --port 8080"
+    "start-prod": "nodemon src/app.js --mode production --port 8080",
+    "start-test": "mocha test/supertest.test.js"
   },
   "keywords": [],
   "author": "",
@@ -37,5 +38,10 @@
     "swagger-ui-express": "^5.0.0",
     "uuid": "^9.0.1",
     "winston": "^3.11.0"
+  },
+  "devDependencies": {
+    "chai": "^5.0.0",
+    "mocha": "^10.2.0",
+    "supertest": "^6.3.3"
   }
 }
