--- a/desafio-14-complementario/package.json
+++ b/desafio-14-complementario/package.json
@@ -8,7 +8,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start-dev": "nodemon src/app.js --mode development --port 3000",
     "start-prod": "nodemon src/app.js --mode production --port 8080",
-    "start-test": "mocha test/supertest.test.js"
+    "start-test": "mocha test/supertest.test.js --mode test --port 8081"
   },
   "keywords": [],
   "author": "",
